<resources>
    <string name="app_name">Trail Angel</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="enter_code">Enter Verification Code</string>
    <string name="code">Verification Code</string>
    <string name="verify">Verify</string>
    <!-- Trails -->
    <string name="trails">Trails</string>
    <string name="parks">Parks</string>
    <string name="parks_desc">Select a park to see its trails.</string>
    <string name="trails_desc">Select a trail to see its details.</string>
    <string name="trail_schedule">Schedule Hike</string>
    <string name="starting_point">Starting Point:</string>
    <string name="length">Length:</string>
    <string name="average_hike_time">Average Hike Time:</string>
    <string name="description">Description:</string>
    <!-- Schedule -->
    <string name="schedule">Schedule</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="change_trail_name">Change Trail Name</string>
    <string name="logout">Logout</string>
    <!-- Common -->
    <string name="phone_number">Phone Number</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="trail_name">Trail Name</string>
    <string name="edit">Edit</string>
    <!-- Navigation -->
    <string name="trails_icon">Trails Icon</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <!-- TODO: Remove this -->
    <string name="testing_trail_name">Half Dome</string>
    <string name="testing_details">Details coming soon!</string>
    <string name="testing_label">Trail Details</string>
</resources>