<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav_graph"
    app:startDestination="@id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.noahgeren.trailangel.ui.login.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.noahgeren.trailangel.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_verify"
            app:destination="@id/navigation_verify" />
    </fragment>
    <fragment
        android:id="@+id/navigation_verify"
        android:name="com.noahgeren.trailangel.ui.login.verify.VerifyFragment"
        android:label="@string/verify"
        tools:layout="@layout/fragment_verify" />
</navigation>