<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/navigation_parks">

    <fragment
        android:id="@+id/navigation_parks"
        android:name="com.noahgeren.trailangel.ui.trails.ParksFragment"
        android:label="@string/trails"
        tools:layout="@layout/fragment_parks" >
        <action
            android:id="@+id/action_parks_to_trails"
            app:destination="@id/navigation_trails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.noahgeren.trailangel.ui.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_navigation_schedule_to_scheduleTrailFragment"
            app:destination="@id/scheduleTrailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.noahgeren.trailangel.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_editContactFragment"
            app:destination="@id/editContactFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_trails"
        android:name="com.noahgeren.trailangel.ui.trails.TrailsFragment"
        android:label="@string/trails"
        tools:layout="@layout/fragment_trails" >
        <action
            android:id="@+id/action_trails_to_trail_details"
            app:destination="@id/navigation_trail_details" />
        <argument
            android:name="parkId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_trail_details"
        android:name="com.noahgeren.trailangel.ui.trails.TrailDetailsFragment"
        android:label="@string/testing_label"
        tools:layout="@layout/fragment_trail_details" >
        <argument android:name="trail"
            app:argType="com.noahgeren.trailangel.models.Trail" />
        <action
            android:id="@+id/action_navigation_trail_details_to_scheduleTrailFragment"
            app:destination="@id/scheduleTrailFragment" />
    </fragment>
    <fragment
        android:id="@+id/scheduleTrailFragment"
        android:name="com.noahgeren.trailangel.ui.common.ScheduleTrailFragment"
        android:label="Schedule Hike"
        tools:layout="@layout/fragment_schedule_trail">
        <argument
            android:name="hike"
            app:argType="com.noahgeren.trailangel.models.Hike" />
    </fragment>
    <fragment
        android:id="@+id/editContactFragment"
        android:name="com.noahgeren.trailangel.ui.settings.EditContactFragment"
        android:label="Edit Contact"
        tools:layout="@layout/fragment_edit_contact">
        <argument
            android:name="contact"
            app:argType="com.noahgeren.trailangel.models.EmergencyContact" />
    </fragment>
</navigation>